Update title on words.html

--- a/words.html
+++ b/words.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Words</title>
+    <title>Wyrd :: Words</title>
     <meta  name"description" content="Companion writings for the wyrd drafts project">
 
     <!-- CSS -->
