--- a/threads.html
+++ b/threads.html
@@ -43,7 +43,7 @@
             <li><a href="http://www.annabockrath.com/">Anna Bockrath</a> - Artist, educator and weaver. Working with Jacob Weinberg on the wonderful <i>draft/patch/weave</i> project</li>
             <li><a href="https://www.jacobweinberg.net/">Jakob Weinberg</a> - Interdiciplinary artist. Working with Anna Bockrath on the wonderful <i>draft/patch/weave</i> project</li>
             <li><a href="https://slab.org/">Alex McLean</a> - Researcher, musician, artist. Creator, co-founder and part of projects such as TidalCycles, TopLap and Penelope among many others.</li>
-            <li><a href="https://kairotic.org/">The Weaving codes - coding weaves</a> - Researcher, musician, artist. Creator, co-founder and part of projects such as TidalCycles, TopLap and Penelope among many others.</li>
+            <li><a href="https://kairotic.org/"></li>
             <li><a href="https://lea.zone">Lea Albaugh</a> - Researcher and educator working with Morphing Matter Lab and the DevLab, and informally with the Textiles Lab.</li>
             <li><a href="https://alpaca.lurk.org/">Alpaca</a> - Site and forum for explerong algorithmic patterns</li>
             </ul>
