--- a/words/weavingdrafts.html
+++ b/words/weavingdrafts.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Wyrd :: Weaving Drafts</title>
     <meta  name"description" content"About Wyrd Drafts">
 
     <!-- CSS -->
