Fix export dimensions and {touchaction: none} for driftingdrafts , spelling mistakes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </div>
 
           <div class="front_container">
-            <p>This site contains the early workings and gatherings of experimental digital hand weaving tools. They are/will be more or less usefull pieces of software aimed towards exploring pattern and draft making for weaving, textile craft and beyond.</p>
+            <p>This site contains the early workings and gatherings of experimental digital hand weaving tools. They are/will be more or less useful pieces of software aimed towards exploring pattern and draft making for weaving, textile craft and beyond.</p>
 
             <p>It is part of an ongoing artistic research project concerning textile and digital technologies, pattern making/reading, (im)material encounters and relations, creativity, ethics, ontology and wide ranges of weird topics.</p> 
             <p>The project is kindly supported by <a href="https://nfh.se/">The Swedish National Handicraft Counsil</a>.</p>
