--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <p>The project is kindly supported by <a href="https://nfh.se/">The Swedish National Handicraft Counsil</a>.</p>
             <p>As of now only a few written <a href="words.html">words</a> and <a href="tools.html">tools</a> are presented here, but many more will come.</p> 
             <p> Feel free to explore the content of the site and use and create of it what you will!</p>
-            <p>Read, fork, remix and contribute to the codebase at <a>GITHUB</a></p>
+            <p>Read, fork, remix and contribute to the codebase at <a href="https://github.com/veitkal/wyrddrafts">GITHUB</a></p>
             <p>//<a href="https://jennerholmhammar.info/">JTJH</a></p>
           </div>
          </div>
@@ -47,8 +47,6 @@
 
       <footer>Copyleft - ShareAlike</footer>
       <div>
-    <!-- js -->
-    <!-- <script src="scripts/ui.js"></script> -->
   </body>
 
 </html>
