Update github link about.html

--- a/words/about.html
+++ b/words/about.html
@@ -49,7 +49,7 @@
             <p>A more technical todo list is maintained <a href="">here</a></p>
             <h4>CONTACT AND FURTHER INFO</h4>
             <p>The initiator and maintainer of this project is <a href="https://jennerholmhammar.info/">Jakob Jennerholm Hammar</a></p>
-            <p>Follow the development and artistic process as either <a href="https://www.instagram.com/knoegle/">images</a> or <a href="https://www.instagram.com/knoegle/">code(ADD GITHUB!!!!)</a></p>
+            <p>Follow the development and artistic process as either <a href="https://www.instagram.com/knoegle/">images</a> or <a href="hhttps://github.com/veitkal/wyrddrafts">code</a></p>
 
           </article>
          </div>
@@ -58,8 +58,7 @@
 
       <footer>Copyleft - ShareAlike</footer>
       <div>
-    <!-- js -->
-    <!-- <script src="scripts/ui.js"></script> -->
+
   </body>
 
 </html>
