added threading/treadling offset

--- a/tools/drifting_drafts/drifting_drafts.html
+++ b/tools/drifting_drafts/drifting_drafts.html
@@ -377,6 +377,25 @@
 
                 </div>
 
+
+                <div class="ui_control__container">
+                  <div class="control_number__container">
+                    <div class="ui_label__container">
+                      <p class="ui_control__label">Threading Offset</p>
+                      <div class="ui_tooltip"> 
+                        <div class="ui_tooltip__arrow"></div>
+                        <p class="ui_tooltip__text">Offsets the threading pattern unit by 'n' each repetition</p> 
+                      </div>
+                    </div>
+                    <div class="control_expr__container">
+                      <input type="text" min="1" max="100" value="0"  
+
+                                                           step="1" class="control_offset__input" id="threading_offset__input">
+                      <button class="ui_control__button" id="threading_offset__button">></button>
+                    </div>
+                  </div>
+                </div>
+
                 <div class="ui_control__container">
                   <div class="ui_control__radio">
                     <div class="ui_label__container">
@@ -431,6 +450,25 @@
                   </div>
 
                 </div>
+                
+                <div class="ui_control__container">
+                  <div class="control_number__container">
+                    <div class="ui_label__container">
+                      <p class="ui_control__label">Treadling Offset</p>
+                      <div class="ui_tooltip"> 
+                        <div class="ui_tooltip__arrow"></div>
+                        <p class="ui_tooltip__text">Offsets the threading pattern unit by 'n' each repetition</p> 
+                      </div>
+                    </div>
+                    <div class="control_expr__container">
+                      <input type="text" min="1" max="100" value="0"  
+
+                                                           step="1" class="control_offset__input" id="treadling_offset__input">
+                      <button class="ui_control__button" id="treadling_offset__button">></button>
+                    </div>
+                  </div>
+                </div>
+
               </div>
 
               <!-- Setup -->
